@@ -138,6 +138,42 @@ func ReportingFetch(metricSet mb.ReportingMetricSet) ([]common.MapStr, []error) 
 	return r.events, r.errs
 }
 
+// NewReportingMetricSetV2 returns a new ReportingMetricSetV2 instance. Then
+// you can use ReportingFetchV2 to perform a Fetch operation with the MetricSet.
+func NewReportingMetricSetV2(t testing.TB, config interface{}) mb.ReportingMetricSetV2 {
+	metricSet := newMetricSet(t, config)
+
+	reportingMetricSetV2, ok := metricSet.(mb.ReportingMetricSetV2)
+	if !ok {
+		t.Fatal("MetricSet does not implement ReportingMetricSetV2")
+	}
+
+	return reportingMetricSetV2
+}
+
+type capturingReporterV2 struct {
+	events []mb.Event
+	errs   []error
+}
+
+func (r *capturingReporterV2) Event(event mb.Event) bool {
+	r.events = append(r.events, event)
+	return true
+}
+
+func (r *capturingReporterV2) Error(err error) bool {
+	r.errs = append(r.errs, err)
+	return true
+}
+
+// ReportingFetchV2 runs the given reporting metricset and returns all of the
+// events and errors that occur during that period.
+func ReportingFetchV2(metricSet mb.ReportingMetricSetV2) ([]mb.Event, []error) {
+	r := &capturingReporterV2{}
+	metricSet.Fetch(r)
+	return r.events, r.errs
+}
+
 // NewPushMetricSet instantiates a new PushMetricSet using the given
 // configuration. The ModuleFactory and MetricSetFactory are obtained from the
 // global Registry.
@@ -217,16 +253,16 @@ func NewPushMetricSetV2(t testing.TB, config interface{}) mb.PushMetricSetV2 {
 	return pushMetricSet
 }
 
-// capturingReporterV2 stores all the events and errors from a metricset's
+// capturingPushReporterV2 stores all the events and errors from a metricset's
 // Run method.
-type capturingReporterV2 struct {
+type capturingPushReporterV2 struct {
 	doneC   chan struct{}
 	eventsC chan mb.Event
 }
 
 // report writes an event to the output channel and returns true. If the output
 // is closed it returns false.
-func (r *capturingReporterV2) report(event mb.Event) bool {
+func (r *capturingPushReporterV2) report(event mb.Event) bool {
 	select {
 	case <-r.doneC:
 		// Publisher is stopped.
@@ -237,17 +273,17 @@ func (r *capturingReporterV2) report(event mb.Event) bool {
 }
 
 // Event stores the passed-in event into the events array
-func (r *capturingReporterV2) Event(event mb.Event) bool {
+func (r *capturingPushReporterV2) Event(event mb.Event) bool {
 	return r.report(event)
 }
 
 // Error stores the given error into the errors array.
-func (r *capturingReporterV2) Error(err error) bool {
+func (r *capturingPushReporterV2) Error(err error) bool {
 	return r.report(mb.Event{Error: err})
 }
 
 // Done returns the Done channel for this reporter.
-func (r *capturingReporterV2) Done() <-chan struct{} {
+func (r *capturingPushReporterV2) Done() <-chan struct{} {
 	return r.doneC
 }
 
@@ -255,7 +291,7 @@ func (r *capturingReporterV2) Done() <-chan struct{} {
 // time and returns all of the events and errors that occur during that period.
 func RunPushMetricSetV2(timeout time.Duration, waitEvents int, metricSet mb.PushMetricSetV2) []mb.Event {
 	var (
-		r      = &capturingReporterV2{doneC: make(chan struct{}), eventsC: make(chan mb.Event)}
+		r      = &capturingPushReporterV2{doneC: make(chan struct{}), eventsC: make(chan mb.Event)}
 		wg     sync.WaitGroup
 		events []mb.Event
 	)
