@@ -10,13 +10,12 @@ import (
 	"unicode/utf16"
 	"unsafe"
 
-	"github.com/elastic/beats/libbeat/logp"
-
-	"github.com/joeshaw/multierror"
 	"github.com/pkg/errors"
 	"golang.org/x/sys/windows"
 
 	"github.com/elastic/beats/libbeat/common"
+	"github.com/elastic/beats/libbeat/logp"
+	"github.com/elastic/beats/metricbeat/mb"
 	"github.com/elastic/beats/winlogbeat/sys"
 )
 
@@ -311,9 +310,10 @@ func (q *Query) Close() error {
 
 type PerfmonReader struct {
 	query         *Query            // PDH Query
-	instanceLabel map[string]string // Mapping of counter path to key used in output.
-	measurement   map[string]string
-	executed      bool // Indicates if the query has been executed.
+	instanceLabel map[string]string // Mapping of counter path to key used for the label (e.g. processor.name)
+	measurement   map[string]string // Mapping of counter path to key used for the value (e.g. processor.cpu_time).
+	executed      bool              // Indicates if the query has been executed.
+	log           *logp.Logger
 }
 
 // NewPerfmonReader creates a new instance of PerfmonReader.
@@ -327,6 +327,7 @@ func NewPerfmonReader(config Config) (*PerfmonReader, error) {
 		query:         query,
 		instanceLabel: map[string]string{},
 		measurement:   map[string]string{},
+		log:           logp.NewLogger("perfmon"),
 	}
 
 	for _, counter := range config.CounterConfig {
@@ -339,13 +340,16 @@ func NewPerfmonReader(config Config) (*PerfmonReader, error) {
 		}
 		if err := query.AddCounter(counter.Query, format, counter.InstanceName); err != nil {
 			if config.IgnoreNECounters {
-				if err == PDH_CSTATUS_NO_COUNTER {
-					logp.Info(`ignore non existent counter (path="%v")`, counter.Query)
+				switch err {
+				case PDH_CSTATUS_NO_COUNTER, PDH_CSTATUS_NO_COUNTERNAME,
+					PDH_CSTATUS_NO_INSTANCE, PDH_CSTATUS_NO_OBJECT:
+					r.log.Infow("Ignoring non existent counter", "error", err,
+						logp.Namespace("perfmon"), "query", counter.Query)
 					continue
 				}
 			}
 			query.Close()
-			return nil, errors.Wrapf(err, `failed to add counter (path="%v")`, counter.Query)
+			return nil, errors.Wrapf(err, `failed to add counter (query="%v")`, counter.Query)
 		}
 
 		r.instanceLabel[counter.Query] = counter.InstanceLabel
@@ -356,9 +360,9 @@ func NewPerfmonReader(config Config) (*PerfmonReader, error) {
 	return r, nil
 }
 
-func (r *PerfmonReader) Read() ([]common.MapStr, error) {
+func (r *PerfmonReader) Read() ([]mb.Event, error) {
 	if err := r.query.Execute(); err != nil {
-		return nil, err
+		return nil, errors.Wrap(err, "failed querying counter values")
 	}
 
 	// Get the values.
@@ -368,38 +372,37 @@ func (r *PerfmonReader) Read() ([]common.MapStr, error) {
 	}
 
 	// Write the values into the map.
-	result := make([]common.MapStr, 0, len(values))
-	var errs multierror.Errors
+	events := make([]mb.Event, 0, len(values))
 
-	for counterPath, counter := range values {
-		for _, val := range counter {
-			ev := common.MapStr{}
-			instanceKey := r.instanceLabel[counterPath]
-			ev.Put(instanceKey, val.Instance)
-			measurementKey := r.measurement[counterPath]
-			ev.Put(measurementKey, val.Measurement)
-
-			if val.Err != nil {
-				switch val.Err {
-				case PDH_CALC_NEGATIVE_DENOMINATOR:
-				case PDH_INVALID_DATA:
-					if r.executed {
-						errs = append(errs, errors.Wrapf(val.Err, "key=%v", measurementKey))
-					}
-				default:
-					errs = append(errs, errors.Wrapf(val.Err, "key=%v", measurementKey))
-				}
+	for counterPath, values := range values {
+		for _, val := range values {
+			if val.Err != nil && !r.executed {
+				r.log.Debugw("Ignoring the first measurement because the data isn't ready",
+					"error", val.Err, logp.Namespace("perfmon"), "query", counterPath)
+				continue
 			}
 
-			result = append(result, ev)
+			event := mb.Event{
+				MetricSetFields: common.MapStr{},
+				Error:           errors.Wrapf(val.Err, "failed on query=%v", counterPath),
+			}
+
+			if val.Instance != "" {
+				event.MetricSetFields.Put(r.instanceLabel[counterPath], val.Instance)
+			}
+
+			if val.Measurement != nil {
+				event.MetricSetFields.Put(r.measurement[counterPath], val.Measurement)
+			} else {
+				event.MetricSetFields.Put(r.measurement[counterPath], 0)
+			}
+
+			events = append(events, event)
 		}
 	}
 
-	if !r.executed {
-		r.executed = true
-	}
-
-	return result, errs.Err()
+	r.executed = true
+	return events, nil
 }
 
 func (e PdhErrno) Error() string {
