@@ -3,22 +3,21 @@
 package perfmon
 
 import (
-	"fmt"
 	"strings"
 
 	"github.com/pkg/errors"
 
-	"github.com/elastic/beats/libbeat/common"
 	"github.com/elastic/beats/libbeat/common/cfgwarn"
+	"github.com/elastic/beats/libbeat/logp"
 	"github.com/elastic/beats/metricbeat/mb"
 )
 
 // CounterConfig for perfmon counters.
 type CounterConfig struct {
-	InstanceLabel    string `config:"instance_label" validate:"required"`
+	InstanceLabel    string `config:"instance_label"    validate:"required"`
 	InstanceName     string `config:"instance_name"`
 	MeasurementLabel string `config:"measurement_label" validate:"required"`
-	Query            string `config:"query" validate:"required"`
+	Query            string `config:"query"             validate:"required"`
 	Format           string `config:"format"`
 }
 
@@ -37,14 +36,14 @@ func init() {
 type MetricSet struct {
 	mb.BaseMetricSet
 	reader *PerfmonReader
+	log    *logp.Logger
 }
 
 // New create a new instance of the MetricSet.
 func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
 	cfgwarn.Beta("The perfmon metricset is beta")
 
-	config := Config{}
-
+	var config Config
 	if err := base.Module().UnpackConfig(&config); err != nil {
 		return nil, err
 	}
@@ -56,28 +55,34 @@ func New(base mb.BaseMetricSet) (mb.MetricSet, error) {
 			value.Format = "float"
 		case "float", "long":
 		default:
-			err := fmt.Errorf("format '%s' for counter '%s' are not valid", value.Format, value.InstanceLabel)
-			return nil, errors.Wrap(err, "initialization failed")
+			return nil, errors.Errorf("initialization failed: format '%s' "+
+				"for counter '%s' is invalid (must be float or long)",
+				value.Format, value.InstanceLabel)
 		}
 
 	}
 
 	reader, err := NewPerfmonReader(config)
 	if err != nil {
-		return nil, errors.Wrap(err, "initialization failed")
+		return nil, errors.Wrap(err, "initialization of reader failed")
 	}
 
 	return &MetricSet{
 		BaseMetricSet: base,
 		reader:        reader,
+		log:           logp.NewLogger("perfmon"),
 	}, nil
 }
 
-func (m *MetricSet) Fetch() ([]common.MapStr, error) {
-	data, err := m.reader.Read()
+func (m *MetricSet) Fetch(report mb.ReporterV2) {
+	events, err := m.reader.Read()
 	if err != nil {
-		return nil, errors.Wrap(err, "failed reading counters")
+		m.log.Debugw("Failed reading counters", "error", err)
+		err = errors.Wrap(err, "failed reading counters")
+		report.Error(err)
 	}
 
-	return data, nil
+	for _, event := range events {
+		report.Event(event)
+	}
 }
